[tool.poetry]
name = "ranking-simple-paragraphs"
version = "0.1.0"
description = "AI4Good Language Learning"
authors = ["Salman Mohammed <salman.mohammed@elementai.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.15"
pandas = "^0.24.2"
jupyterlab = "^0.35.4"
pandas-summary = "^0.0.6"
seaborn = "^0.9.0"
scikit-learn = "^0.20.3"
spacy = "^2.1"


[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
